changing pooling configuration

--- a/Experiments/config.json
+++ b/Experiments/config.json
@@ -3,11 +3,12 @@
 "rebalanced": false,
 "zfactor": 0.25,
 "model": 4,
-"dpconvo": 0.2,
-"regfull": ["l1", 0.2],
-"convofields": [3, 3],
-"fulllayers": [64, 32],
 "convolayers": [128, 64, 32],
+"convofields": [3, 3],
+"dpconvo": 0.2,
+"pool": ["average", 2, 2],
+"fulllayers": [64, 32],
+"regfull": ["l1", 0.2],
 "classweight": {"0": 1.0, "1": 1.0, "2": 2.0, "3": 3.0, "4": 4.0},
 "epochs": 200,
 "lrate": 0.005,
