--- a/Config/config.example.json
+++ b/Config/config.example.json
@@ -8,7 +8,7 @@
 "convolayers": [128, 64, 32],
 "convofields": [3, 3],
 "dpconvo": 0.2,
-"pool": ["average", 2, 2],
+"pool": ["max", 2, 2],
 "fulllayers": [64, 32],
 "regfull": ["l1", 0.2],
 "classweight": {"0": 1.0, "1": 1.0, "2": 2.0, "3": 3.0, "4": 4.0},
