Documenting configuration file, changing code to use theano image ordering by defaults and assume labels begginning in 0

--- a/Config/config.example.json
+++ b/Config/config.example.json
@@ -1,21 +1,22 @@
 {
-  "datapath": "/home/bejar/storage/Data/Traffic/Datasets/",
+ "datapath": "/home/bejar/storage/Data/Traffic/Datasets/",
+ "savepath": "/home/bejar/storage/Data/Traffic/Models/",
  "train": [[2016,11,1,30],[2016,10,29,31]],
-"test": [[2016, 12, 1,2]],
-"rebalanced": false,
-"zfactor": 0.25,
-"model": 4,
-"convolayers": [128, 64, 32],
-"convofields": [3, 3],
-"dpconvo": 0.2,
-"pool": ["max", 2, 2],
-"fulllayers": [64, 32],
-"regfull": ["l1", 0.2],
-"classweight": {"0": 1.0, "1": 1.0, "2": 2.0, "3": 3.0, "4": 4.0},
-  "optimizer":"sdg",
-"lrate": 0.005,
-"batchsize": 256,
-"momentum": 0.9,
+ "test": [[2016, 12, 1,2]],
+ "rebalanced": false,
+ "zfactor": 0.25,
+ "model": 4,
+ "convolayers": [128, 64, 32],
+ "convofields": [3, 3],
+ "dpconvo": 0.2,
+ "pool": ["max", 2, 2],
+ "fulllayers": [64, 32],
+ "regfull": ["l1", 0.2],
+ "classweight": {"0": 1.0, "1": 1.0, "2": 2.0, "3": 3.0, "4": 4.0},
+ "optimizer":"sdg",
+ "lrate": 0.005,
+ "batchsize": 256,
+ "momentum": 0.9,
  "epochs": 200,
-"imgord": "th"
+ "imgord": "th"
 }
