--- a/Config/config.example.json
+++ b/Config/config.example.json
@@ -1,22 +1,28 @@
 {
  "datapath": "/home/bejar/storage/Data/Traffic/Datasets/",
  "savepath": "/home/bejar/storage/Data/Traffic/Models/",
- "train": [[2016,11,1,30],[2016,10,29,31]],
- "test": [[2016, 12, 1,2]],
+ "traindata": [[2016,11,1,30],[2016,10,29,31]],
+ "testdata": [[2016, 12, 1,2]],
  "rebalanced": false,
  "zfactor": 0.25,
  "model": 4,
- "convolayers": [128, 64, 32],
- "convofields": [3, 3],
- "dpconvo": 0.2,
- "pool": ["max", 2, 2],
- "fulllayers": [64, 32],
- "regfull": ["l1", 0.2],
- "classweight": {"0": 1.0, "1": 1.0, "2": 2.0, "3": 3.0, "4": 4.0},
- "optimizer":"sdg",
- "lrate": 0.005,
- "batchsize": 256,
- "momentum": 0.9,
- "epochs": 200,
+ "convolayers":
+  {"sizes": [128, 64, 32],
+   "convofields": [3, 3],
+   "dpconvo": 0.2,
+   "pool": ["max", 2, 2]},
+ "fulllayers":
+  {"sizes": [64, 32],
+   "regfull": ["l1", 0.2]},
+ "optimizer":
+   {"method": "sdg",
+    "params":
+     {"lrate": 0.005,
+      "momentum": 0.9
+      },
+ "train":
+   {"batchsize": 256,
+    "epochs": 200,
+    "classweight": {"0": 1.0, "1": 1.0, "2": 2.0, "3": 3.0, "4": 4.0}}},
  "imgord": "th"
 }
