Now decay has to be given in the configuration file

--- a/Config/config.example.json
+++ b/Config/config.example.json
@@ -19,7 +19,7 @@
     "params":
      {"lrate": 0.005,
       "momentum": 0.9,
-      "decay": true,
+      "decay": 0,
       "nesterov": false
       }},
  "train":
