--- a/Doc/config.example.json
+++ b/Doc/config.example.json
@@ -4,6 +4,7 @@
  "traindata": [[2016,11,1,30],[2016,10,29,31]],
  "testdata": [[2016, 12, 1,2]],
  "rebalanced": false,
+ "recode": "0|0,1|1,2|2,3|3,4|4",
  "zfactor": 0.25,
  "model": 4,
  "convolayers":
